--- a/test/test-monaco.htm
+++ b/test/test-monaco.htm
@@ -8,13 +8,13 @@
         <link rel="stylesheet" data-name="vs/editor/editor.main" href="https://cdn.jsdelivr.net/npm/monaco-editor@0.30.0/min/vs/editor/editor.main.min.css">
     </head>
 
-    <body style="background-color: rgb(140, 190, 190);">
+    <body >
         <h1>monaco editor</h1>
         <div id="monaco_editor" style="height:400px">
         </div>
 
         <!-- MONACO JS -->
-        <script>var require = { paths: { 'vs': '_static/js/ext/monaco-editor/min/vs' } };</script>
+        <!-- <script>var require = { paths: { 'vs': '_static/js/ext/monaco-editor/min/vs' } };</script> -->
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.30.0/min/vs/loader.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.30.0/min/vs/editor/editor.main.nls.js"></script>
