--- a/test/test-monaco.htm
+++ b/test/test-monaco.htm
@@ -14,7 +14,7 @@
         </div>
 
         <!-- MONACO JS -->
-        <!-- <script>var require = { paths: { 'vs': '_static/js/ext/monaco-editor/min/vs' } };</script> -->
+        <script>var require = { paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.30.0/min/vs' } };</script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.30.0/min/vs/loader.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.30.0/min/vs/editor/editor.main.nls.js"></script>
