--- a/test/test-monaco.htm
+++ b/test/test-monaco.htm
@@ -29,7 +29,10 @@
                 '\tconsole.log("Hello world!"); test();',
                 '}'
             ].join('\n'),
-            language: 'javascript'
+            language: 'javascript',
+			"autoIndent": true,
+			"formatOnPaste": true,
+			"formatOnType": true
         });
 
 		currentEditor.addAction({
