--- a/test/test-monaco.htm
+++ b/test/test-monaco.htm
@@ -5,7 +5,7 @@
         <title>monaco editor</title>
 
         <!-- MONACO CSS -->
-        <link rel="stylesheet" data-name="vs/editor/editor.main" href="https://cdn.jsdelivr.net/npm/monaco-editor@0.49.0/min/vs/editor/editor.main.min.css">
+        <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/monaco-editor@0.49.0/min/vs/editor/editor.main.min.css">
     </head>
 
     <body >
