--- a/app7/login.html
+++ b/app7/login.html
@@ -2,12 +2,24 @@
 <!-- 
     Settings para probar el inicio de sesion con google
     [
-        {"id":"app7-login","version":"googleSignIn"},{"id":"app7-cloudy-index.css","version":"googleSignIn"},
+        {"id":"app7-login","version":"googleSignIn"},
+        {"id":"app7-cloudy-index.css","version":"googleSignIn"},
         {"id":"app7-global","version":"googleSignIn"},
         {"id":"app7-doorsapi","version":"googleSignIn"},
         {"id":"app7-session","version":"googleSignIn"},
         {"id": "doorsapi2", "version": "googleSignIn"}
-] -->
+] 
+ [
+        {"id":"app7-login","version":"googleSignIn2"},
+        {"id":"app7-cloudy-index.css","version":"googleSignIn2"},
+        {"id":"app7-global","version":"googleSignIn2"},
+        {"id":"app7-doorsapi","version":"googleSignIn2"},
+        {"id":"app7-session","version":"googleSignIn2"},
+        {"id": "doorsapi2", "version": "googleSignIn2"}
+]
+
+
+-->
 
 <div class="login-screen">
     <!-- Default view-page layout -->
