--- a/app7/login.html
+++ b/app7/login.html
@@ -13,7 +13,7 @@
         {"id":"app7-login","version":"googleSignIn2"},
         {"id":"app7-cloudy-index.css","version":"googleSignIn2"},
         {"id":"app7-global","version":"googleSignIn2"},
-        {"id":"app7-doorsapi","version":"googleSignIn2"},
+        {"id":"doorsapi","version":"googleSignIn2"},
         {"id":"app7-session","version":"googleSignIn2"},
         {"id": "doorsapi2", "version": "googleSignIn2"}
 ]
