probando capacitor-social-login

--- a/app7/login.html
+++ b/app7/login.html
@@ -98,6 +98,9 @@
                 <li class="item-content not-logged-item">
                     <button id="logon" class="button button-large">Iniciar sesi&oacute;n</button>
                 </li>
+                <li class="item-content not-logged-item">
+                    <button id="googlelogon" class="button button-large">Google</button>
+                </li>
                 <li class="item-content logged-item">
                     <button id="logoff" class="button button-large">Cerrar sesi&oacute;n</button>
                 </li>
