--- a/app7/login.html
+++ b/app7/login.html
@@ -1,17 +1,30 @@
 
 <!-- 
     Settings para probar el inicio de sesion con google
-    [
-     
-        {"id":"app7-login","version":"googleSignIn3"}
-        {"id":"app7-global","version":"googleSignIn3"},
-        OLD
-        {"id":"app7-login","version":"googleSignIn"},{"id":"app7-cloudy-index.css","version":"googleSignIn"},
-        {"id":"app7-global","version":"googleSignIn"},
-        {"id":"app7-doorsapi","version":"googleSignIn"},
-        {"id":"app7-session","version":"googleSignIn"},
-        {"id": "doorsapi2", "version": "googleSignIn"}
-] -->
+   [
+  {
+    "id": "app7-login",
+    "version": "googleSignIn3"
+  },
+  {
+    "id": "app7-global",
+    "version": "googleSignIn3"
+  },
+  {
+    "id": "app7-index",
+    "version": "googleSignIn3"
+  },
+  {
+    "id": "app7-session",
+    "version": "googleSignIn3"
+  },
+  {
+    "id": "doorsapi2",
+    "version": "googleSignIn3"
+  }
+]
+
+ -->
 
 <div class="login-screen">
     <!-- Default view-page layout -->
