--- a/app7/login.html
+++ b/app7/login.html
@@ -7,6 +7,10 @@
     "version": "googleSignIn3"
   },
   {
+    "id": "app7-cloudy-index.css",
+    "version": "googleSignIn3"
+  },
+  {
     "id": "app7-global",
     "version": "googleSignIn3"
   },
