--- a/app7/signin.html
+++ b/app7/signin.html
@@ -15,7 +15,7 @@
                         </div>
                     </div>
                 </li>
-                
+
                 <li class="item-content item-input">
                     <div class="item-inner">
                         <div class="item-title item-floating-label">
@@ -46,10 +46,10 @@
 
         <div class="list no-hairlines-md">
             <ul>
-                <li>
+                <li class="item-content item-input">
                     <button id="signin" class="button button-large">Registrarme</button>
                 </li>
-                <li>
+                <li class="item-content item-input">
                     <button id="cancel" class="button button-large">Salir</button>
                 </li>
             </ul>
