--- a/app7/signin.html
+++ b/app7/signin.html
@@ -47,10 +47,10 @@
         <div class="list no-hairlines-md">
             <ul>
                 <li class="item-content item-input">
-                    <button id="signin" class="button button-large">Registrarme</button>
+                    <button id="signin" class="button button-raised">Registrarme</button>
                 </li>
                 <li class="item-content item-input">
-                    <button id="cancel" class="button button-large">Salir</button>
+                    <button id="cancel" class="button button-raised">Salir</button>
                 </li>
             </ul>
         </div>
