--- a/app7/signin.html
+++ b/app7/signin.html
@@ -15,30 +15,31 @@
                         </div>
                     </div>
                 </li>
+                <div class="credentials-data">
+                    <li class="item-content item-input">
+                        <div class="item-inner">
+                            <div class="item-title item-floating-label">
+                                Email o celular
+                            </div>
+                            <div class="item-input-wrap">
+                                <input type="text" id="email" placeholder="Email">
+                                <span class="input-clear-button">
+                            </div>
+                        </div>
+                    </li>
 
-                <li class="item-content item-input">
-                    <div class="item-inner">
-                        <div class="item-title item-floating-label">
-                            Email o celular
+                    <li class="item-content item-input">
+                        <div class="item-inner">
+                            <div class="item-title item-floating-label">
+                                Nombre
+                            </div>
+                            <div class="item-input-wrap">
+                                <input type="text" id="nombre" placeholder="Nombre">
+                                <span class="input-clear-button">
+                            </div>
                         </div>
-                        <div class="item-input-wrap">
-                            <input type="text" id="email" placeholder="Email">
-                            <span class="input-clear-button">
-                        </div>
-                    </div>
-                </li>
-
-                <li class="item-content item-input">
-                    <div class="item-inner">
-                        <div class="item-title item-floating-label">
-                            Nombre
-                        </div>
-                        <div class="item-input-wrap">
-                            <input type="text" id="nombre" placeholder="Nombre">
-                            <span class="input-clear-button">
-                        </div>
-                    </div>
-                </li>
+                    </li>
+                </div>
             </ul>
         </div>
 
