Agregar clase 'list' a la sección de datos de credenciales en signin.html

--- a/app7/signin.html
+++ b/app7/signin.html
@@ -18,7 +18,7 @@
             </ul>
         </div>
 
-        <div class="credentials-data">
+        <div class="list credentials-data">
             <ul>
                 <li class="item-content item-input">
                     <div class="item-inner">
