--- a/app7/signin.html
+++ b/app7/signin.html
@@ -18,31 +18,33 @@
             </ul>
         </div>
 
-        <div class="list credentials-data">
-            <ul>
-                <li class="item-content item-input">
-                    <div class="item-inner">
-                        <div class="item-title item-floating-label">
-                            Email o celular
+        <div class="list">
+            <div class="credentials-data">
+                <ul>
+                    <li class="item-content item-input">
+                        <div class="item-inner">
+                            <div class="item-title item-floating-label">
+                                Email o celular
+                            </div>
+                            <div class="item-input-wrap">
+                                <input type="text" id="email" placeholder="Email">
+                                <span class="input-clear-button">
+                            </div>
                         </div>
-                        <div class="item-input-wrap">
-                            <input type="text" id="email" placeholder="Email">
-                            <span class="input-clear-button">
+                    </li>
+                    <li class="item-content item-input">
+                        <div class="item-inner">
+                            <div class="item-title item-floating-label">
+                                Nombre
+                            </div>
+                            <div class="item-input-wrap">
+                                <input type="text" id="nombre" placeholder="Nombre">
+                                <span class="input-clear-button">
+                            </div>
                         </div>
-                    </div>
-                </li>
-                <li class="item-content item-input">
-                    <div class="item-inner">
-                        <div class="item-title item-floating-label">
-                            Nombre
-                        </div>
-                        <div class="item-input-wrap">
-                            <input type="text" id="nombre" placeholder="Nombre">
-                            <span class="input-clear-button">
-                        </div>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>   
         </div>
         <div class="list no-hairlines-md">
             <ul>
