--- a/app7/signin.html
+++ b/app7/signin.html
@@ -43,14 +43,17 @@
                             </div>
                         </div>
                     </li>
+                    <li class="item-content item-input">
+                        <button id="signin" class="button button-raised">Registrarme</button>
+                    </li>
                 </ul>
             </div>   
         </div>
         <div class="list no-hairlines-md">
             <ul>
-                <li class="item-content item-input">
+                <!-- <li class="item-content item-input">
                     <button id="signin" class="button button-raised">Registrarme</button>
-                </li>
+                </li> -->
                 <li class="item-content item-input">
                     <button id="cancel" class="button button-raised">Salir</button>
                 </li>
