--- a/app7/signin.html
+++ b/app7/signin.html
@@ -15,6 +15,12 @@
                         </div>
                     </div>
                 </li>
+                <li class="item-content not-logged-item">
+                    <button id="googlelogon" type="button" class="login-with-google-btn">
+                        Sign in with Google
+                    </button>
+                    <!-- <button id="logongoogle" class="button button-raised">Iniciar con Google</button> -->
+                </li>
             </ul>
         </div>
 
