--- a/app7/signin.html
+++ b/app7/signin.html
@@ -17,7 +17,7 @@
                 </li>
                 <li class="item-content not-logged-item">
                     <button id="googlelogon" type="button" class="login-with-google-btn">
-                        Sign in with Google
+                        Registrarme con Google
                     </button>
                     <!-- <button id="logongoogle" class="button button-raised">Iniciar con Google</button> -->
                 </li>
