--- a/app7/login.html
+++ b/app7/login.html
@@ -95,7 +95,7 @@
                             <button id="logon" class="button button-raised">Iniciar sesi&oacute;n</button>
                         </li>
                         <li>
-                            <div class="separator-or not-logged-item">Or</div>
+                            <div class="separator-or not-logged-item">O</div>
                         </li>
                         <li class="item-content not-logged-item">
                             <button id="googlelogon" type="button" class="login-with-google-btn">
