--- a/app7/signin.html
+++ b/app7/signin.html
@@ -21,9 +21,12 @@
                     </button>
                     <!-- <button id="logongoogle" class="button button-raised">Iniciar con Google</button> -->
                 </li>
+                <li>
+                    <div class="separator-or not-logged-item">O</div>
+                </li>
             </ul>
         </div>
-
+        
         <div class="list">
             <div class="credentials-data">
                 <ul>
