--- a/app7/signin.html
+++ b/app7/signin.html
@@ -7,7 +7,7 @@
                 <li class="item-content item-input">
                     <div class="item-inner">
                         <div class="item-title item-floating-label">
-                            Empresa *
+                            Empresa
                         </div>
                         <div class="item-input-wrap">
                             <input type="text" id="empresa" placeholder="Empresa">
