--- a/app7/login.html
+++ b/app7/login.html
@@ -9,6 +9,10 @@
     "id": "app7-signin",
     "version": "googleSignIn3"
   },
+    {
+    "id": "app7-resetpass",
+    "version": "googleSignIn3"
+  },
   {
     "id": "app7-cloudy-index.css",
     "version": "googleSignIn3"
