--- a/app7/resetpass.html
+++ b/app7/resetpass.html
@@ -16,11 +16,11 @@
                     </div>
                 </li>
 
-                <li>
+                <li class="item-content item-input">
                     <button id="sendcode" class="button button-large" style="margin-top: 20px">Enviar c&oacute;digo</button>
                 </li>
 
-                <li>
+                <li class="item-content item-input">
                     <div id="instrucciones" class="block block-footer inset" style="color: rgba(255, 255, 255, 0.8);"></div>
                 </li>
 
