--- a/app7/resetpass.html
+++ b/app7/resetpass.html
@@ -17,10 +17,10 @@
                 </li>
 
                 <li class="item-content item-input">
-                    <button id="sendcode" class="button button-large" style="margin-top: 20px">Enviar c&oacute;digo</button>
+                    <button id="sendcode" class="button button-raised" style="margin-top: 20px">Enviar c&oacute;digo</button>
                 </li>
 
-                <li class="item-content item-input">
+                <li class="">
                     <div id="instrucciones" class="block block-footer inset" style="color: rgba(255, 255, 255, 0.8);"></div>
                 </li>
 
@@ -36,8 +36,8 @@
                     </div>
                 </li>
 
-                <li>
-                    <button id="confirmcode" class="button button-large" style="margin-top: 20px">Confirmar c&oacute;digo</button>
+                <li class="item-content item-input">
+                    <button id="confirmcode" class="button button-raised" style="margin-top: 20px">Confirmar c&oacute;digo</button>
                 </li>
 
                 <li>
@@ -48,8 +48,8 @@
                     <div id="message" class="block block-footer inset" style="color: red;"></div>
                 </li>
 
-                <li>
-                    <button id="cancel" class="button button-large">Salir</button>
+                <li class="item-content item-input">
+                    <button id="cancel" class="button button-raised">Salir</button>
                 </li>
             </ul>
         </div>
