--- a/app7/signin.html
+++ b/app7/signin.html
@@ -50,7 +50,7 @@
                         <div class="separator-or not-logged-item">O</div>
                     </li>
                     <li class="item-content not-logged-item">
-                        <button id="googlelogon" type="button" class="login-with-google-btn">
+                        <button id="signupgoogle" type="button" class="login-with-google-btn">
                             Registrarme con Google
                         </button>
                         <!-- <button id="logongoogle" class="button button-raised">Iniciar con Google</button> -->
